fix renderers height in list and comboboxes that was having strange wrap more visible when filtering. Now basic renders use display:block (just text), while more complex renders use display:flex for better layout. Also improve examples in TDJ with renders that has more than one line in List and ComboBox

--- a/frameworks/projects/Jewel/src/main/resources/defaults.css
+++ b/frameworks/projects/Jewel/src/main/resources/defaults.css
@@ -432,7 +432,6 @@ j|ComboBox {
     box-shadow: none !important;
   }
   .combobox-popup .jewel.list .jewel.item {
-    height: 0;
     overflow: hidden;
     transition: height 200ms ease-in;
   }
@@ -858,20 +857,20 @@ j|ImageButton {
 }
 
 .jewel.item, .jewel.navigationlink, .jewel.tabbarbutton {
-  display: flex;
+  display: block;
   min-height: 34px;
   text-decoration: none;
-  align-items: center;
   letter-spacing: 0;
   line-height: normal !important;
   overflow: hidden;
   cursor: auto;
 }
+.jewel.item.mxmlContent, .jewel.navigationlink.mxmlContent, .jewel.tabbarbutton.mxmlContent {
+  display: flex;
+  align-items: center;
+}
 .jewel.item.selectable, .jewel.navigationlink.selectable, .jewel.tabbarbutton.selectable {
   cursor: pointer;
-}
-.jewel.item.preserveWhiteSpaces, .jewel.navigationlink.preserveWhiteSpaces, .jewel.tabbarbutton.preserveWhiteSpaces {
-  white-space: pre;
 }
 .jewel.item .fonticon, .jewel.navigationlink .fonticon, .jewel.tabbarbutton .fonticon {
   cursor: inherit;
