--- a/frameworks/projects/Jewel/src/main/sass/components/_combobox.sass
+++ b/frameworks/projects/Jewel/src/main/sass/components/_combobox.sass
@@ -156,7 +156,7 @@ $combobox-item-min-heigh: 34px
             box-shadow: none !important
 
             .jewel.item
-                height: 0
+                // height: 0
                 overflow: hidden
                 transition: height 200ms ease-in
 
